[package]
name = "checkplz"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.


[dependencies]
clap = { version = "4.5", features = ["derive"] }
windows = { version = "0.62.2", features = ["Win32_System_Antimalware"] }
colored = "3.1"
rand = "0.10"
ureq = "3.2"
